lib/GSL/Special/log.h

int gsl_sf_log_e(double x,double* result);
double gsl_sf_log(double x);
int gsl_sf_log_abs_e(double x,double* result);
double gsl_sf_log_abs(double x);
int gsl_sf_complex_log_e(double zr,double zi,double* lnr,double* theta);
int gsl_sf_log_1plusx_e(double x,double* result);
double gsl_sf_log_1plusx(double x);
int gsl_sf_log_1plusx_mx_e(double x,double* result);
double gsl_sf_log_1plusx_mx(double x);